[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standman"
version = "1.0.0"
description = "Loosely-coupled, one-way function wiring for white-box testing and simple add-ons."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "minoru_jp" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
keywords = ["whitebox-testing", "testing", "observer", "add-on", "loose-coupling"]

[project.urls]
Homepage = "https://github.com/minoru-jp/standman"
Source = "https://github.com/minoru-jp/standman"
Issues = "https://github.com/minoru-jp/standman/issues"

[tool.setuptools.packages.find]
include = ["standman*"]
